--- a/Index.css
+++ b/Index.css
@@ -357,6 +357,7 @@ section {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     display: flex;
     flex-direction: column;
+   text-decoration: none;
 }
 .card:hover {
     transform: translateY(-5px);
@@ -369,9 +370,12 @@ section {
     margin-top: 1.5rem;
     font-weight: 600;
     align-self: flex-start;
+   text-decoration: none;
 }
 .card-link i {
     transition: transform 0.3s ease;
+   text-decoration: none;
+   text-decoration: none;
 }
 .card-link:hover i {
     transform: translateX(5px);
@@ -485,6 +489,7 @@ section {
     color: var(--primary-color);
     margin-bottom: 1rem;
 }
+
 
 
 
